# trat

./: CMakeLists.txt  Makefile  Makefile-Mingw64  README.md  bot  bugs_to_fix.txt  decompiler.cpp  features_to_add.txt  main.c  test.cpp
env/: .clientId  .token
include/: bot.hpp  emailer.hpp  main.hpp  networking.hpp  parser.hpp  shell.hpp
notes/: bugs_to_fix.txt  features_to_add.txt
src/: main.cpp  networking.cpp  parser.cpp
src/Bot/: bot.cpp  handling.cpp  listen.cpp  sending.cpp  telegramNetworking.cpp  work.cpp
src/Shell/: shell.cpp
